crates/rs_db_parser/src/ast/commands/snapshots/rs_db_parser__ast__commands__create__tests__case_column_parse@col-str.snap
---
source: crates/rs_db_parser/src/ast/commands/create.rs
description: "Input: column_name varchar(10)"
expression: value
---
RawColumn {
    name: LocatedSpan {
        offset: 0,
        line: 1,
        fragment: "column_name",
        extra: (),
    },
    tp: (
        LocatedSpan {
            offset: 12,
            line: 1,
            fragment: "varchar(10)",
            extra: (),
        },
        VarChar(
            10,
        ),
    ),
}
